# sonar-config-as-code

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: publish.yml  rust.yml
example/: sonar.yaml
src/: config_file_model.rs  generate_token.rs  main.rs  setup.rs  sonar_api.rs  sonar_api_model.rs
